# ive never used meson before, but figured i'd give it
# a shot instead of being locked to cmake forever, so 
# hopefully it's okay otherwise ill really regret this :)
# ref -> https://mesonbuild.com/Syntax.html

project('SIND', 'cpp',
  default_options: ['cpp_std=c++23']
)

executable(
  'SIND.com', 
  ['src/cmd/cmd.cpp', 'src/api/api.cpp']
)
